# ShikshaGuard

./: FEATURE_AUDIT_REPORT.md  README.md  package-lock.json
BAV-System-main/: .gitignore  PROPOSAL_REJECTION_ANALYSIS.py  analyze_validation.py  analyze_validation_correct.py  check_labels.py  config.py  manual_seed.py  pyproject.toml  requirements.txt  scratch.py  worst_performing_schools.py
BAV-System-main/alembic/: env.py
BAV-System-main/alembic/versions/: 11e359166d6b_initial_schema.py
BAV-System-main/app/api/: main.py
BAV-System-main/app/api/auth/: __init__.py  auth.py
BAV-System-main/app/api/routes/: auth_routes.py  data_routes.py  planning.py  simulation.py
BAV-System-main/app/api/routes/__pycache__/: __intit__.cpython-310.pyc.2416208389584
BAV-System-main/app/data/: final_dataset.csv  merge_data.py  pipeline.py
BAV-System-main/app/data/__pycache__/: merge_data.cpython-310.pyc.2416208855952  pipeline.cpython-310.pyc.2416208855952
BAV-System-main/app/database/: db.py  models.py
BAV-System-main/app/models/: feature_names.joblib  iso_anomaly.joblib  rf_validator.joblib  train.py
BAV-System-main/app/models/__pycache__/: train.cpython-310.pyc.2416208858832
BAV-System-main/app/services/: ai_service.py  risk_service.py  simulation_service.py  validation_service.py
BAV-System-main/app/utils/: feature_builder.py  rule_engine.py
frontend/: index.html  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: AiControlPanel.jsx  Dashboard.jsx  DataManagement.jsx  Forecaster.jsx  Login.jsx  (+6 more)
(+1 files in other folders)
