[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shikshasgaurd"
version = "3.0.0"
description = "AI-powered School Infrastructure Validation and Forecasting System"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*"]